fixed cramped first three sections

--- a/HTML_and_CSS/4_shutterbugg/style.css
+++ b/HTML_and_CSS/4_shutterbugg/style.css
@@ -71,7 +71,7 @@ a {
 }
 
 .footer h3{
-  font-size: 18px;
+  font-size: 17px;
   color: #555555;
 }
 
